tests/test_input_files/good/test_good_lambda_5.punkt
function takes_lambda < <int> -> int f > -> int {
	for var i = 0, i <= 10, i = i + 1 {
		print f(i).
	}
	return 0.
}

main {
	var fib = <int n> -> int {
		if n <= 0 {
			return 0.
		}
		if n <= 2 {
			return 1.
		}
		return fib(n - 1) + fib(n - 2).
	}.
	var ret = takes_lambda(fib).
}
