tests/test_input_files/bad/test_bad_return_stmt_13.punkt
function f <> -> int {
  for var i = 0, i < 5, i += 1 {
    if i == 0
      return 0.
    else
      return 1.
  }
}

main {
  f().
}
